--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,8 +8,12 @@
 
       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         <ul class="navbar-nav">
-          <li class="nav-item"><a href="#" class="nav-link">Signup</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Login</a></li>
+          <% if user_signed_in? %>
+            <li class="nav-item"><%= link_to "サインアウト", destroy_user_session_path, method: :delete, class: 'nav-link' %></li>
+          <% else %>
+            <li class="nav-item"><%= link_to 'Signup', new_user_registration_path, class: 'nav-link' %></li>
+            <li class="nav-item"><%= link_to 'Login', new_user_session_path, class: 'nav-link' %></li>
+          <% end %>
         </ul>
       </div>
     </div>
