--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,9 @@
-<p>テスト</p>
+<% if user_signed_in? %>
+  <p>サインインしています</p>
+<% else %>
+  <div class="bg-secondary p-3 p-sm-5 my-4 rounded">
+    <div class="text-center text-white">
+      <h1>友達の写真や動画をチェックしよう</h1>
+    </div>
+  </div>
+<% end %>
