--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,6 +9,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <% if user_signed_in? %>
+            <li class="nav-item"><%= link_to "ユーザー", current_user, class: "nav-link" %></li>
             <li class="nav-item"><%= link_to "サインアウト", destroy_user_session_path, method: :delete, class: 'nav-link' %></li>
           <% else %>
             <li class="nav-item"><%= link_to 'Signup', new_user_registration_path, class: 'nav-link' %></li>
