--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,8 @@
 <% if user_signed_in? %>
-  <p>サインインしています</p>
+  <% @posts.each do |post| %>
+    <p><%= post.caption %></p>
+    <%= image_tag post.image.url(:medium) %>
+  <% end %>
 <% else %>
   <div class="bg-secondary p-3 p-sm-5 my-4 rounded">
     <div class="text-center text-white">
