--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -23,12 +23,26 @@
               <p class="mb-0"><%= post.caption %></p>
               <%= time_ago_in_words(post.created_at).upcase + "前" %>
               <hr>
+              <h3>コメント</h3>
+              <% post.comments.each do |comment| %>
+                <!-- TODO styling -->
+                user_id: <%= comment.user_id %>,
+                post_id: <%= comment.post_id %>,
+                user_email: <%= post.user.email %>
+                <p><%= comment.comment %></p>
+                <%= link_to '削除する', comment, method: :delete, data: { confirm: '本当に削除してよろしいですか？' }, class: 'btn btn-danger' %>
+                <br/>
+              <% end %>
+              <hr>
               <div class="row parts">
-                <form action="#" class="w-100">
+                <%= form_with model: post.comments.build, class: "d-inline" do |f| %>
                   <div>
-                    <textarea class="form-control comment-input border-0" placeholder="コメント..." rows="1"></textarea>
+                    <%= f.hidden_field :post_id %>
+                    <%= f.hidden_field :user_id %>
+                    <%= f.text_area :comment, class: "form-control comment-input border-0", placeholder: "コメント", rows: "1" %>
+                    <%= f.submit 'コメント' , class: 'btn btn-primary' %>
                   </div>
-                </form>
+                <% end %>
               </div>
             </div>
           </div>
