--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,6 +10,15 @@
               <% if post.user == current_user %>
                 <%= link_to '削除する', post, method: :delete, data: { confirm: '本当に削除してよろしいですか？' }, class: 'btn btn-danger' %>
               <% end %>
+              <!--TODO 後でrenderにしたい-->
+              <% if current_user != post.user %>
+                <% if post.user.followed_by?(current_user) %>
+                  <p><%= link_to "フォロー解除", user_follows_path(post.user.id), method: :delete, class: 'btn btn-danger' %></p>
+                <% else %>
+                  <!--TODO フォローしたユーザーの画面に遷移させるにはどうする？-->
+                  <p><%= link_to "フォローする", user_follows_path(post.user.id), method: :post, class: 'btn btn-primary' %></p>
+                <% end %>
+              <% end %>
               <%= render 'likes/favorite_button', post: post %>
             </div>
           </div>
