--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -34,7 +34,7 @@
         <%= link_to "フォロー" , follows_user_path(@user.id), class: "btn btn-primary" %>
         <%= link_to "フォロワー" , followers_user_path(@user.id), class: "btn btn-primary" %>
       </p>
-      <% if current_user !=@user %>
+      <% if current_user != @user %>
         <% if @user.followed_by?(current_user) %>
           <p>
             <%=link_to "フォロー済み" , user_relationships_path(@user.id), method: :delete %>
@@ -45,6 +45,23 @@
           </p>
         <% end %>
       <% end %>
+  
+      <div>
+        <h3>おすすめユーザー</h3>
+        <% @recommend_users.each do |ru| %>
+          <!--TODO 実装怪しいので要確認：データも色々投入する必要あり：そもそもテストを書く必要がある -->
+          <% if current_user.id != ru.follower.id %>
+            <!--該当ユーザーのユーザー詳細へのリンクをつける-->
+            <p><%= ru.follower.email %>
+              <% if ru.follower.followed_by?(current_user) %>
+                <%=link_to "フォロー済み" , user_follows_path(ru.follower_id), method: :delete, class: "btn btn-danger" %>
+              <% else %>
+                <%=link_to "フォローする" , user_follows_path(ru.follower_id), method: :post, class: "btn btn-primary" %>
+              <% end %>
+            </p>
+          <% end %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
